Ensure footer is "stuck" to bottom. (Closes: #49)

--- a/media/css/freenodejobs.css.d/20_features.css.d/f_base.scss
+++ b/media/css/freenodejobs.css.d/20_features.css.d/f_base.scss
@@ -1,4 +1,11 @@
+html {
+  position: relative;
+  min-height: 100%;
+}
+
 .f_base {
+  margin-bottom: 200px;
+
   nav.navbar {
     background-color: #292f2f !important;
 
@@ -49,6 +56,17 @@
   }
 
   footer {
+    width: 100%;
+    height: 100px;
+    bottom: 0;
+    padding: 80px !important;
+    position: absolute;
     background-color: #292f2f !important;
+
+    .link-ter {
+      margin-top: -10px;
+      padding-top: 10px;
+      padding-bottom: 0;
+    }
   }
 }
